adversarial-game/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/private/var/folders/3l/r639nwn55cd16t24ds9zddxcfg0rd6/T/AppTranslocation/8F8BCF2F-2B8D-4988-ADA6-862CF2BB5E94/d/Greenfoot.app/Contents/JDK/Home/bin/javadoc
-author
-version
-nodeprecated
-protected
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
/private/var/folders/3l/r639nwn55cd16t24ds9zddxcfg0rd6/T/AppTranslocation/8F8BCF2F-2B8D-4988-ADA6-862CF2BB5E94/d/Greenfoot.app/Contents/Resources/Java/extensions/greenfoot.jar:/private/var/folders/3l/r639nwn55cd16t24ds9zddxcfg0rd6/T/AppTranslocation/8F8BCF2F-2B8D-4988-ADA6-862CF2BB5E94/d/Greenfoot.app/Contents/Resources/Java/bluejcore.jar:/private/var/folders/3l/r639nwn55cd16t24ds9zddxcfg0rd6/T/AppTranslocation/8F8BCF2F-2B8D-4988-ADA6-862CF2BB5E94/d/Greenfoot.app/Contents/Resources/Java/bluejeditor.jar:/private/var/folders/3l/r639nwn55cd16t24ds9zddxcfg0rd6/T/AppTranslocation/8F8BCF2F-2B8D-4988-ADA6-862CF2BB5E94/d/Greenfoot.app/Contents/Resources/Java/bluejext.jar:/private/var/folders/3l/r639nwn55cd16t24ds9zddxcfg0rd6/T/AppTranslocation/8F8BCF2F-2B8D-4988-ADA6-862CF2BB5E94/d/Greenfoot.app/Contents/Resources/Java/AppleJavaExtensions.jar:/private/var/folders/3l/r639nwn55cd16t24ds9zddxcfg0rd6/T/AppTranslocation/8F8BCF2F-2B8D-4988-ADA6-862CF2BB5E94/d/Greenfoot.app/Contents/Resources/Java/junit-4.11.jar:/private/var/folders/3l/r639nwn55cd16t24ds9zddxcfg0rd6/T/AppTranslocation/8F8BCF2F-2B8D-4988-ADA6-862CF2BB5E94/d/Greenfoot.app/Contents/Resources/Java/hamcrest-core-1.3.jar:/private/var/folders/3l/r639nwn55cd16t24ds9zddxcfg0rd6/T/AppTranslocation/8F8BCF2F-2B8D-4988-ADA6-862CF2BB5E94/d/Greenfoot.app/Contents/Resources/Java/bluej.jar:/private/var/folders/3l/r639nwn55cd16t24ds9zddxcfg0rd6/T/AppTranslocation/8F8BCF2F-2B8D-4988-ADA6-862CF2BB5E94/d/Greenfoot.app/Contents/Resources/Java/diffutils-1.2.1.jar:/private/var/folders/3l/r639nwn55cd16t24ds9zddxcfg0rd6/T/AppTranslocation/8F8BCF2F-2B8D-4988-ADA6-862CF2BB5E94/d/Greenfoot.app/Contents/Resources/Java/commons-logging-api-1.1.2.jar:/private/var/folders/3l/r639nwn55cd16t24ds9zddxcfg0rd6/T/AppTranslocation/8F8BCF2F-2B8D-4988-ADA6-862CF2BB5E94/d/Greenfoot.app/Contents/Resources/Java/jl1.0.1.jar:/private/var/folders/3l/r639nwn55cd16t24ds9zddxcfg0rd6/T/AppTranslocation/8F8BCF2F-2B8D-4988-ADA6-862CF2BB5E94/d/Greenfoot.app/Contents/Resources/Java/opencsv-2.3.jar:/private/var/folders/3l/r639nwn55cd16t24ds9zddxcfg0rd6/T/AppTranslocation/8F8BCF2F-2B8D-4988-ADA6-862CF2BB5E94/d/Greenfoot.app/Contents/Resources/Java/xom-1.2.9.jar:/private/var/folders/3l/r639nwn55cd16t24ds9zddxcfg0rd6/T/AppTranslocation/8F8BCF2F-2B8D-4988-ADA6-862CF2BB5E94/d/Greenfoot.app/Contents/Resources/Java/lang-stride.jar:/private/var/folders/3l/r639nwn55cd16t24ds9zddxcfg0rd6/T/AppTranslocation/8F8BCF2F-2B8D-4988-ADA6-862CF2BB5E94/d/Greenfoot.app/Contents/Resources/Java/nsmenufx-2.1.4.jar:/private/var/folders/3l/r639nwn55cd16t24ds9zddxcfg0rd6/T/AppTranslocation/8F8BCF2F-2B8D-4988-ADA6-862CF2BB5E94/d/Greenfoot.app/Contents/Resources/Java/richtextfx-fat-0.9.0.jar:/private/var/folders/3l/r639nwn55cd16t24ds9zddxcfg0rd6/T/AppTranslocation/8F8BCF2F-2B8D-4988-ADA6-862CF2BB5E94/d/Greenfoot.app/Contents/Resources/Java/guava-17.0.jar:/private/var/folders/3l/r639nwn55cd16t24ds9zddxcfg0rd6/T/AppTranslocation/8F8BCF2F-2B8D-4988-ADA6-862CF2BB5E94/d/Greenfoot.app/Contents/Resources/Java/javassist-3.18.0.jar:/private/var/folders/3l/r639nwn55cd16t24ds9zddxcfg0rd6/T/AppTranslocation/8F8BCF2F-2B8D-4988-ADA6-862CF2BB5E94/d/Greenfoot.app/Contents/Resources/Java/commons-vfs2-2.0.jar:/private/var/folders/3l/r639nwn55cd16t24ds9zddxcfg0rd6/T/AppTranslocation/8F8BCF2F-2B8D-4988-ADA6-862CF2BB5E94/d/Greenfoot.app/Contents/Resources/Java/httpclient-4.1.1.jar:/private/var/folders/3l/r639nwn55cd16t24ds9zddxcfg0rd6/T/AppTranslocation/8F8BCF2F-2B8D-4988-ADA6-862CF2BB5E94/d/Greenfoot.app/Contents/Resources/Java/httpcore-4.1.jar:/private/var/folders/3l/r639nwn55cd16t24ds9zddxcfg0rd6/T/AppTranslocation/8F8BCF2F-2B8D-4988-ADA6-862CF2BB5E94/d/Greenfoot.app/Contents/Resources/Java/httpmime-4.1.1.jar:/Users/odiaz/Desktop/Class/Computer Science/ics4u-culminating/adversarial-game
-d
/Users/odiaz/Desktop/Class/Computer Science/ics4u-culminating/adversarial-game/doc
-encoding
UTF-8
-charset
UTF-8
/Users/odiaz/Desktop/Class/Computer Science/ics4u-culminating/adversarial-game/HealthKit.java
<---- end of javadoc command ---->
Loading source file /Users/odiaz/Desktop/Class/Computer Science/ics4u-culminating/adversarial-game/HealthKit.java...
/Users/odiaz/Desktop/Class/Computer Science/ics4u-culminating/adversarial-game/HealthKit.java:30: error: reached end of file while parsing
    }    
     ^
1 error
